--- a/uis/pages/home.ipynb
+++ b/uis/pages/home.ipynb
@@ -12,18 +12,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.9.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.2"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+    "hash": "2cafc29d15d8b8ae4608620c88536d98717521857c8b94b092cfe47c581a5c16"
    }
   }
  },
